@@ -1,6 +1,11 @@
 <configure
-    xmlns="http://namespaces.zope.org/zope">
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:browser="http://namespaces.zope.org/browser">
 
   <include package="plone.z3cform"/>
+
+  <browser:resource
+      name="collective.z3cform.wizard.css"
+      file="wizard.css"/>
 
 </configure>
